cambio del header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       class="navbar p-4 bg-azul-oscuro navbar-expand-lg fixed-top"
     >
       <div class="container">
-        <a class="navbar-brand text-light" href="#">Portfolio 1i</a>
+        <a class="navbar-brand text-light" href="#">1i</a>
         <button
           class="navbar-toggler bg-azul-marino burguer-button"
           type="button"
