cambie el mensaje de full stack

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="text-center">
           <h3>START ROLLING</h3>
           ✨
-          <div>Full stack developer</div>
+          <div>Full stack developer Senior</div>
         </div>
       </div>
     </div>
