--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           class="main-image mb-3"
         />
         <div class="text-center">
-          <h3>START ROLLING</h3>
+          <h2>START ROLLING</h2>
           ✨
-          <div>Full stack developer Senior</div>
+          <div>Full stack developer Junior</div>
         </div>
       </div>
     </div>
