--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <a
                 class="nav-link text-light hover-celeste"
                 href="error404.html"
-                >SUSCRIBE</a
+                >SUSCRIBITE CHANGO</a
               >
             </li>
           </ul>
